// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render PlaylistForm correctly 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <input
    autoFocus={true}
    onChange={[Function]}
    placeholder="ชื่อรายการ"
    type="text"
    value=""
  />
  <Connect(PlaylistSummary)
    playlist={
      Object {
        "description": "",
        "error": "",
        "lists": Array [],
      }
    }
  />
  <Checkbox
    category="บทสวดมนต์ภาคเย็น"
    duration={155.99425}
    filename="11_เขมาเขมสรณคมนปริทีปิกาคาถา.mp3"
    id="11"
    key="0"
    lists={Array []}
    lyrics={
      Array [
        "abc",
        "dfg",
      ]
    }
    onAddLists={[Function]}
    onRemoveLists={[Function]}
    precept="เขมาเขมสรณคมนปริทีปิกาคาถา"
  />
  <Checkbox
    category="บทสวดมนต์ภาคเย็น"
    duration={99.99425}
    filename="12_อริยธนคาถา.mp3"
    id="12"
    key="1"
    lists={Array []}
    lyrics={
      Array [
        "123",
        "456",
      ]
    }
    onAddLists={[Function]}
    onRemoveLists={[Function]}
    precept="อริยธนคาถา"
  />
  <Checkbox
    category="บทสวดมนต์ภาคเย็น"
    duration={212.99425}
    filename="13_ติลักขณาทิคาถา.mp3"
    id="13"
    key="2"
    lists={Array []}
    lyrics={
      Array [
        "789",
        "123",
      ]
    }
    onAddLists={[Function]}
    onRemoveLists={[Function]}
    precept="ติลักขณาทิคาถา"
  />
  <div>
    <button
      className="button form-button"
    >
      เพิ่มรายการ
    </button>
  </div>
</form>
`;

exports[`should render PlaylistForm with playlists data 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <input
    autoFocus={true}
    onChange={[Function]}
    placeholder="ชื่อรายการ"
    type="text"
    value="Playlist name three"
  />
  <Connect(PlaylistSummary)
    playlist={
      Object {
        "description": "Playlist name three",
        "error": "",
        "lists": Array [
          "อานาปานสติสูตร",
          "อริยมรรคมีองค์แปด",
          "ธัมมจักกัปปวัตตนสุตตปาฐะ",
        ],
      }
    }
  />
  <Checkbox
    category="บทสวดมนต์ภาคเย็น"
    duration={155.99425}
    filename="11_เขมาเขมสรณคมนปริทีปิกาคาถา.mp3"
    id="11"
    key="0"
    lists={
      Array [
        "อานาปานสติสูตร",
        "อริยมรรคมีองค์แปด",
        "ธัมมจักกัปปวัตตนสุตตปาฐะ",
      ]
    }
    lyrics={
      Array [
        "abc",
        "dfg",
      ]
    }
    onAddLists={[Function]}
    onRemoveLists={[Function]}
    precept="เขมาเขมสรณคมนปริทีปิกาคาถา"
  />
  <Checkbox
    category="บทสวดมนต์ภาคเย็น"
    duration={99.99425}
    filename="12_อริยธนคาถา.mp3"
    id="12"
    key="1"
    lists={
      Array [
        "อานาปานสติสูตร",
        "อริยมรรคมีองค์แปด",
        "ธัมมจักกัปปวัตตนสุตตปาฐะ",
      ]
    }
    lyrics={
      Array [
        "123",
        "456",
      ]
    }
    onAddLists={[Function]}
    onRemoveLists={[Function]}
    precept="อริยธนคาถา"
  />
  <Checkbox
    category="บทสวดมนต์ภาคเย็น"
    duration={212.99425}
    filename="13_ติลักขณาทิคาถา.mp3"
    id="13"
    key="2"
    lists={
      Array [
        "อานาปานสติสูตร",
        "อริยมรรคมีองค์แปด",
        "ธัมมจักกัปปวัตตนสุตตปาฐะ",
      ]
    }
    lyrics={
      Array [
        "789",
        "123",
      ]
    }
    onAddLists={[Function]}
    onRemoveLists={[Function]}
    precept="ติลักขณาทิคาถา"
  />
  <div>
    <button
      className="button form-button"
    >
      เพิ่มรายการ
    </button>
  </div>
</form>
`;

exports[`should render error for invalid form submission 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <input
    autoFocus={true}
    onChange={[Function]}
    placeholder="ชื่อรายการ"
    type="text"
    value=""
  />
  <Connect(PlaylistSummary)
    playlist={
      Object {
        "description": "",
        "error": "",
        "lists": Array [],
      }
    }
  />
  <Checkbox
    category="บทสวดมนต์ภาคเย็น"
    duration={155.99425}
    filename="11_เขมาเขมสรณคมนปริทีปิกาคาถา.mp3"
    id="11"
    key="0"
    lists={Array []}
    lyrics={
      Array [
        "abc",
        "dfg",
      ]
    }
    onAddLists={[Function]}
    onRemoveLists={[Function]}
    precept="เขมาเขมสรณคมนปริทีปิกาคาถา"
  />
  <Checkbox
    category="บทสวดมนต์ภาคเย็น"
    duration={99.99425}
    filename="12_อริยธนคาถา.mp3"
    id="12"
    key="1"
    lists={Array []}
    lyrics={
      Array [
        "123",
        "456",
      ]
    }
    onAddLists={[Function]}
    onRemoveLists={[Function]}
    precept="อริยธนคาถา"
  />
  <Checkbox
    category="บทสวดมนต์ภาคเย็น"
    duration={212.99425}
    filename="13_ติลักขณาทิคาถา.mp3"
    id="13"
    key="2"
    lists={Array []}
    lyrics={
      Array [
        "789",
        "123",
      ]
    }
    onAddLists={[Function]}
    onRemoveLists={[Function]}
    precept="ติลักขณาทิคาถา"
  />
  <div>
    <button
      className="button form-button"
    >
      เพิ่มรายการ
    </button>
  </div>
</form>
`;

exports[`should render error for invalid form submission 2`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <p
    className="form__error"
  >
    กรุณาใส่ชื่อรายการและเลือกบทสวดมนต์
  </p>
  <input
    autoFocus={true}
    onChange={[Function]}
    placeholder="ชื่อรายการ"
    type="text"
    value=""
  />
  <Connect(PlaylistSummary)
    playlist={
      Object {
        "description": "",
        "error": "กรุณาใส่ชื่อรายการและเลือกบทสวดมนต์",
        "lists": Array [],
      }
    }
  />
  <Checkbox
    category="บทสวดมนต์ภาคเย็น"
    duration={155.99425}
    filename="11_เขมาเขมสรณคมนปริทีปิกาคาถา.mp3"
    id="11"
    key="0"
    lists={Array []}
    lyrics={
      Array [
        "abc",
        "dfg",
      ]
    }
    onAddLists={[Function]}
    onRemoveLists={[Function]}
    precept="เขมาเขมสรณคมนปริทีปิกาคาถา"
  />
  <Checkbox
    category="บทสวดมนต์ภาคเย็น"
    duration={99.99425}
    filename="12_อริยธนคาถา.mp3"
    id="12"
    key="1"
    lists={Array []}
    lyrics={
      Array [
        "123",
        "456",
      ]
    }
    onAddLists={[Function]}
    onRemoveLists={[Function]}
    precept="อริยธนคาถา"
  />
  <Checkbox
    category="บทสวดมนต์ภาคเย็น"
    duration={212.99425}
    filename="13_ติลักขณาทิคาถา.mp3"
    id="13"
    key="2"
    lists={Array []}
    lyrics={
      Array [
        "789",
        "123",
      ]
    }
    onAddLists={[Function]}
    onRemoveLists={[Function]}
    precept="ติลักขณาทิคาถา"
  />
  <div>
    <button
      className="button form-button"
    >
      เพิ่มรายการ
    </button>
  </div>
</form>
`;
